# word-freq

./: .changelogithubrc  .gitignore  README.md  cn_stopwords.txt  main.py  pyproject.toml  pytest.ini
.github/: release-drafter.yml
.github/workflows/: publish.yml
tests/: conftest.py  test_cli.py  test_core.py
wordfreq/: __init__.py  cli.py  core.py
wordfreq_cn/: __init__.py  cli.py  core.py
wordfreq_cn/data/: cn_stopwords.txt
