[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordfreq-cn"
version = "0.0.2"
description = "中文新闻词频分析与趋势词云工具"
authors = [{name = "likanug", email = "likanug.g@qq.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "jieba",
    "scikit-learn",
    "wordcloud",
    "matplotlib"
]

[project.scripts]
wordfreq-cn = "wordfreq_cn.cli:main"

[tool.setuptools.packages.find]
include = ["wordfreq*"]
exclude = ["wordclouds"]