[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordfreq-cn"
version = "0.0.2"
description = "中文新闻词频分析与趋势词云工具"
authors = [{name = "likanug", email = "likanug.g@qq.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "jieba>=0.42.1",
    "scikit-learn>=1.7.2",
    "wordcloud>=1.9.4",
    "matplotlib>=3.10.7"
]

[project.scripts]
wordfreq-cn = "wordfreq_cn.cli:main"

[tool.setuptools.packages.find]
include = ["wordfreq*"]
exclude = ["wordclouds"]